{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 237,
  "lineage": "65446565-aff3-f3ed-a013-cf6f3ff2b44e",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:security-group/sg-0f39846c9b5cc23d4",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f39846c9b5cc23d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tetris-project-alb-sg",
            "name_prefix": "",
            "owner_id": "391369718038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tetris-project-alb-sg"
            },
            "tags_all": {
              "Name": "tetris-project-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02db791084314dc52"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:security-group/sg-0950819bcbe1aee76",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0950819bcbe1aee76",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f39846c9b5cc23d4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tetris-project-nodes-sg",
            "name_prefix": "",
            "owner_id": "391369718038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tetris-project-nodes-sg",
              "kubernetes.io/cluster/tetris-project": "owned"
            },
            "tags_all": {
              "Name": "tetris-project-nodes-sg",
              "kubernetes.io/cluster/tetris-project": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02db791084314dc52"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc_module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:vpc/vpc-02db791084314dc52",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030c092b1b69b58b9",
            "default_route_table_id": "rtb-00f1ee8975bed3aac",
            "default_security_group_id": "sg-03c0f35dbc7589f41",
            "dhcp_options_id": "dopt-0c09bce85e57f0823",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02db791084314dc52",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f1ee8975bed3aac",
            "owner_id": "391369718038",
            "tags": {
              "Name": "tetris-project-vpc"
            },
            "tags_all": {
              "Name": "tetris-project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_module.module.gateways",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf82138f78fa5e46",
            "arn": "arn:aws:ec2:us-east-1:391369718038:elastic-ip/eipalloc-0cf82138f78fa5e46",
            "domain": "vpc",
            "id": "eipalloc-0cf82138f78fa5e46",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-224-53-48.compute-1.amazonaws.com",
            "public_ip": "34.224.53.48",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_module.module.gateways",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:internet-gateway/igw-01fd6d4b042bdb551",
            "id": "igw-01fd6d4b042bdb551",
            "owner_id": "391369718038",
            "tags": {
              "Name": "tetris-project-igw"
            },
            "tags_all": {
              "Name": "tetris-project-igw"
            },
            "vpc_id": "vpc-02db791084314dc52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module.module.gateways",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf82138f78fa5e46",
            "association_id": "eipassoc-0ced02ca64bbc525a",
            "connectivity_type": "public",
            "id": "nat-0688decb4c79b3b9a",
            "network_interface_id": "eni-04c2785541823bd4c",
            "private_ip": "10.0.1.209",
            "public_ip": "34.224.53.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-046e35ec2ef7ced65",
            "tags": {
              "Name": "tetris-project-nat"
            },
            "tags_all": {
              "Name": "tetris-project-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this",
            "module.vpc_module.module.gateways.aws_eip.nat",
            "module.vpc_module.module.subnets.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module.module.routing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:route-table/rtb-0bf6557b577ddaee6",
            "id": "rtb-0bf6557b577ddaee6",
            "owner_id": "391369718038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0688decb4c79b3b9a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02db791084314dc52"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this",
            "module.vpc_module.module.gateways.aws_eip.nat",
            "module.vpc_module.module.gateways.aws_nat_gateway.nat",
            "module.vpc_module.module.subnets.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module.module.routing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:route-table/rtb-0dcefe424d4f5eae7",
            "id": "rtb-0dcefe424d4f5eae7",
            "owner_id": "391369718038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01fd6d4b042bdb551",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02db791084314dc52"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this",
            "module.vpc_module.module.gateways.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module.module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a766ea59110907b",
            "route_table_id": "rtb-0bf6557b577ddaee6",
            "subnet_id": "subnet-08291f417aa96a24a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this",
            "module.vpc_module.module.gateways.aws_eip.nat",
            "module.vpc_module.module.gateways.aws_nat_gateway.nat",
            "module.vpc_module.module.routing.aws_route_table.private",
            "module.vpc_module.module.subnets.aws_subnet.private",
            "module.vpc_module.module.subnets.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071b63f3b5209af02",
            "route_table_id": "rtb-0bf6557b577ddaee6",
            "subnet_id": "subnet-07f67b19ecd388b2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this",
            "module.vpc_module.module.gateways.aws_eip.nat",
            "module.vpc_module.module.gateways.aws_nat_gateway.nat",
            "module.vpc_module.module.routing.aws_route_table.private",
            "module.vpc_module.module.subnets.aws_subnet.private",
            "module.vpc_module.module.subnets.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b9f67fd249c1e58",
            "route_table_id": "rtb-0bf6557b577ddaee6",
            "subnet_id": "subnet-0dfb1a070a71ce7a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this",
            "module.vpc_module.module.gateways.aws_eip.nat",
            "module.vpc_module.module.gateways.aws_nat_gateway.nat",
            "module.vpc_module.module.routing.aws_route_table.private",
            "module.vpc_module.module.subnets.aws_subnet.private",
            "module.vpc_module.module.subnets.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module.module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08752daa9d72ac32c",
            "route_table_id": "rtb-0dcefe424d4f5eae7",
            "subnet_id": "subnet-046e35ec2ef7ced65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this",
            "module.vpc_module.module.gateways.aws_internet_gateway.igw",
            "module.vpc_module.module.routing.aws_route_table.public",
            "module.vpc_module.module.subnets.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033c3358852660d8c",
            "route_table_id": "rtb-0dcefe424d4f5eae7",
            "subnet_id": "subnet-09629f8eefb16f842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this",
            "module.vpc_module.module.gateways.aws_internet_gateway.igw",
            "module.vpc_module.module.routing.aws_route_table.public",
            "module.vpc_module.module.subnets.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0666ea8f5d8759ce2",
            "route_table_id": "rtb-0dcefe424d4f5eae7",
            "subnet_id": "subnet-08075a6152e5605b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this",
            "module.vpc_module.module.gateways.aws_internet_gateway.igw",
            "module.vpc_module.module.routing.aws_route_table.public",
            "module.vpc_module.module.subnets.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:subnet/subnet-08291f417aa96a24a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08291f417aa96a24a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391369718038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02db791084314dc52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:subnet/subnet-07f67b19ecd388b2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f67b19ecd388b2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391369718038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02db791084314dc52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:subnet/subnet-0dfb1a070a71ce7a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfb1a070a71ce7a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391369718038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1c",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1c",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02db791084314dc52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:subnet/subnet-046e35ec2ef7ced65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046e35ec2ef7ced65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "391369718038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02db791084314dc52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:subnet/subnet-09629f8eefb16f842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09629f8eefb16f842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "391369718038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02db791084314dc52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391369718038:subnet/subnet-08075a6152e5605b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08075a6152e5605b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "391369718038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1c",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1c",
              "kubernetes.io/cluster/tetris-project": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02db791084314dc52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}